# basis_universal

./: .appveyor.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CppProperties.json  INSTALL_README.md  NOTICE  README.md  REUSE.toml  SECURITY.md  all_builds.py  apg_bmp.c  appveyor.yml  basis_mem.cpp  basis_mem.h  basisu-config.cmake.in  basisu.manifest  basisu.sln  basisu.vcxproj  basisu.vcxproj.filters  basisu_astc_decomp.cpp  basisu_backend.cpp  basisu_backend.h  basisu_basis_file.cpp  basisu_basis_file.h  basisu_comp.cpp  basisu_comp.h  basisu_containers.natvis  basisu_enc.cpp  basisu_enc.h  basisu_etc.cpp  basisu_etc.h  basisu_frontend.cpp  basisu_frontend.h  basisu_global_selector_palette_helpers.cpp  basisu_global_selector_palette_helpers.h  basisu_gpu_texture.cpp  basisu_gpu_texture.h  (+25 more)
.github/workflows/: file_format.py  static_checks.yml  tests.yml
.reuse/: dep5
LICENSES/: Apache-2.0.txt  BSD-3-Clause.txt  MIT.txt
OpenCL/: license.txt
OpenCL/CL/: cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_ext.h  cl_gl.h  cl_va_api_media_sharing_intel.h
OpenCL/lib/: OpenCL.lib  OpenCL64.lib
bench/: bench.txt
bench/basisu_best/: lion_photo-1470848051974-964b789cb6fa.basis  lion_photo-1470848051974-964b789cb6fa_transcoded_BC1_0.ktx  lion_photo-1470848051974-964b789cb6fa_transcoded_ETC1_0.7z  (+2 more)
bench/bc1/: stats.txt  (+2 more)
cmake/: Config.cmake.in  basisuConfig.cmake.in
cmd_help/: cmd_help.txt  process.py
contrib/: .gitignore
detex/: decompress_bc.c  decompress_bc.h  decompress_bc7.c  decompress_bc7.h  decompress_eac.c  decompress_eac.h  detex_common.h
encoder/: apg_bmp.c  apg_bmp.h  basisu_astc_decomp.cpp  basisu_astc_decomp.h  basisu_astc_hdr_6x6_enc.cpp  basisu_astc_hdr_6x6_enc.h  basisu_astc_hdr_common.cpp  basisu_astc_hdr_common.h  basisu_astc_hdr_enc.cpp  basisu_astc_hdr_enc.h  basisu_astc_ldr_common.cpp  basisu_astc_ldr_common.h  basisu_astc_ldr_encode.cpp  basisu_astc_ldr_encode.h  basisu_astc_ldr_fencode.cpp  basisu_astc_ldr_fencode.h  basisu_astc_ldr_pseudoinv_tab.inl  basisu_backend.cpp  basisu_backend.h  basisu_basis_file.cpp  basisu_basis_file.h  basisu_bc15_spmd.cpp  basisu_bc15_spmd.h  basisu_bc15_spmd_kernels.inl  basisu_bc15_spmd_sse.cpp  basisu_bc7e_scalar.cpp  basisu_bc7e_scalar.h  basisu_bc7enc.cpp  basisu_bc7enc.h  basisu_comp.cpp  basisu_comp.h  basisu_dds_export.cpp  basisu_dds_export.h  basisu_enc.cpp  basisu_enc.h  basisu_etc.cpp  basisu_etc.h  basisu_frontend.cpp  basisu_frontend.h  basisu_gpu_texture.cpp  (+31 more)
encoder_lib/: encoder_lib.vcxproj  encoder_lib.vcxproj.filters
example/: example.cpp  example.vcxproj  example.vcxproj.filters
example_capi/: example_capi.c  example_capi.vcxproj  example_capi.vcxproj.filters
example_transcoding/: dds_defs.h  example_transcoding.cpp  example_transcoding.vcxproj  example_transcoding.vcxproj.filters  utils.cpp  utils.h
khronos/: CMakeLists.txt
opencl/: CMakeLists.txt  frontend.c  ocldevice.cpp  oclfrontend.cpp  oclfrontend_api.h  oclhost.cpp  oclhost.h  oclhost_internal.h  oclprogram.cpp
python/: README.md  README_win.md  astc_writer.py  basisu_encoder_pybind11.cpp  basisu_transcoder_pybind11.cpp  dds_writer.py  explode_ktx2_file.py  pyproject.toml
python/basisu_py/: MANIFEST.in  READMD.md  __init__.py  basisu_python.pyd  basisu_transcoder_python.pyd  codec.py  constants.py  transcoder.py
python/basisu_py/wasm/: __init__.py  basisu_transcoder_module_mt.wasm  basisu_transcoder_module_st.wasm  wasm_encoder.py  wasm_transcoder.py
python/lowlevel_test_native/: basic_test.py  example_capi_python.py  test_transcoder_basic.py
python/lowlevel_test_wasm/: basic_test.py  basisu_wasm.py  compress_test.py  compress_test_float.py
python/shader_deblocking/: README.md  kodim14_12x12.ktx2  kodim26_xubc7.ktx2  run.bat  testbed.py
python/tests/: __init__.py  test_backend_loading.py  test_basic_backend_selection.py  test_basic_decode.py  test_basic_transcode.py  test_basic_wasm_selection.py  test_compress_swirl.py  test_compress_swirl_hdr.py  test_transcoder_astc.py  test_transcoder_backend_loading.py  test_transcoder_end_to_end.py  test_transcoder_end_to_end_hdr.py  test_transcoder_helpers.py
shader_deblocking/: README.md  run.bat  shader.glsl  testbed.py
shader_deblocking_d3d11/: CMakeLists.txt  README.md  main.cpp
shader_deblocking_glfw/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
spec/: basis_spec.txt
src/: CMakeLists.txt  basisu_comp.cpp  basisu_pvrtc1_4.cpp
src/encoder/: CMakeLists.txt  basisu_basis_file.cpp  basisu_basis_file.h  basisu_frontend.cpp  basisu_pvrtc1_4.h  basisu_resampler.cpp  basisu_resampler_filters.h
src/tool/: CMakeLists.txt  basisu_tool.cpp
src/transcoder/: CMakeLists.txt  basisu_file_headers.h  basisu_global_selector_palette.h  basisu_transcoder.cpp  basisu_transcoder_internal.h
test_files/: base_xuastc_arith.ktx2  base_xuastc_zstd.ktx2  bicycle_alpha.qoi  kodim01.dds  kodim01.ktx2  kodim18.qoi  kodim23.ktx2  license.txt  memorial.exr  texarray_alpha_0.dds
tests/: test_utils.py
tool/: CMakeLists.txt  basisu_tool.cpp
transcoder/: basisu.h  basisu_astc_hdr_core.h  basisu_astc_helpers.h  basisu_config.h  basisu_containers.h  basisu_containers_impl.h  basisu_dds_transcoder.inl  basisu_file_headers.h  basisu_global_selector_cb.h  basisu_global_selector_palette.h  basisu_transcoder.cpp  basisu_transcoder.h  basisu_transcoder_internal.h  basisu_transcoder_uastc.h  basisu_xbc7_decoder.h  basisu_xbc7_decoder.inl
webgl/: .gitignore  .htaccess  README.md  alpha.basis  alpha2.basis  basis.js  basis.js.mem  build.sh  index.html  kodim20.basis  laststarfighter_1024.basis  start_webserver.sh  webserver_cross_origin.py  xmen.basis
webgl/encoder/: .gitignore  CMakeLists.txt  Makefile  README.md  basisu.js  basisu.wasm  basisu_wrappers.cpp  build_notes.txt
webgl/transcoder/: .gitignore  CMakeLists.txt  README.md  basis_wrappers.cpp  image_transcoder_wrapper.cpp
webgl_videotest/: basis.js  basis.js.mem  basis.wasm  basis_wrappers.cpp  build.bat  build.sh  dxt-to-rgb565.js  index.html  renderer.js
zstd/: zstd.c
(+121 files in other folders)
